k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: otfl
  namespace: otfl
  labels:
    app: otfl
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`otfl.inevitable.fyi`)"
      kind: Rule
      services:
        - name: otfl
          port: 80
  tls:
    secretName: otfl-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: otfl-http
  namespace: otfl
  labels:
    app: otfl
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`otfl.inevitable.fyi`)"
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: default
      services:
        - name: otfl
          port: 80
